fix(shs-5112): fixing contrast on ext vertical links

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-linked-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-linked-card.scss
@@ -155,9 +155,17 @@
     }
   }
 
-  &__title__link {
+  &__title__link,
+  &__title__link.ext {
     @include hb-global-color('color', 'white');
     text-decoration: none;
+
+    &:hover,
+    &:focus {
+      @include hb-global-color('color', 'white');
+
+      background-image: none;
+    }
   }
 
   &__description {
